tests/ui/const-generics/fn-const-param-infer.min.stderr
error: using function pointers as const generic parameters is forbidden
  --> $DIR/fn-const-param-infer.rs:8:25
   |
LL | struct Checked<const F: fn(usize) -> bool>;
   |                         ^^^^^^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error[E0308]: mismatched types
  --> $DIR/fn-const-param-infer.rs:33:25
   |
LL |     let _ = Checked::<{ generic_arg::<u32> }>;
   |                         ^^^^^^^^^^^^^^^^^^ expected fn pointer, found fn item
   |
   = note: expected fn pointer `fn(usize) -> _`
                 found fn item `fn(u32) -> _ {generic_arg::<u32>}`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
